--- a/DevAndreaCarrattaIT.MailGun/DevAndreaCarrattaIT.MailGun.csproj
+++ b/DevAndreaCarrattaIT.MailGun/DevAndreaCarrattaIT.MailGun.csproj
@@ -1,10 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.29" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DevAndreaCarrattaIT.MailGun.Lib\DevAndreaCarrattaIT.MailGun.Lib.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
