Add MailGun Send Azure Function

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /DevAndreaCarrattaIT.MailGun.Lib/obj
+/DevAndreaCarrattaIT.MailGun.Lib/bin/Debug/netcoreapp2.2
