--- a/DevAndreaCarrattaIT.MailGun/DevAndreaCarrattaIT.MailGun.csproj
+++ b/DevAndreaCarrattaIT.MailGun/DevAndreaCarrattaIT.MailGun.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.29" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DevAndreaCarrattaIT.MailGun.Lib\DevAndreaCarrattaIT.MailGun.Lib.csproj" />
